--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,100 @@
-mxnet==1.7.0.post1
-torch==1.6.0
-numpy==1.19.1
+absl-py==0.10.0
+APScheduler==3.6.3
+attrs==20.2.0
+backcall==0.2.0
+cachetools==4.1.1
+certifi==2020.6.20
+cffi==1.14.4
+chardet==3.0.4
+click==7.1.2
+comet-ml==3.2.4
+configobj==5.0.6
+cryptography==3.2.1
+cssselect==1.1.0
+cssutils==1.0.2
+Cython==0.29.21
+dataclasses==0.6
+decorator==4.4.2
+docopt==0.6.2
+dulwich==0.20.6
 emoji==0.6.0
-transformers==3.0.2
-setproctitle==1.1.10
-pandas==1.1.3
-pytorch_lightning==1.0.6
+everett==1.0.2
+filelock==3.0.12
+fsspec==0.8.4
+future==0.18.2
 gluonnlp==0.10.0
-soynlp==0.0.493
+google-auth==1.22.1
+google-auth-oauthlib==0.4.1
+graphviz==0.8.4
+grpcio==1.32.0
+idna==2.10
+importlib-metadata==2.0.0
+ipython-genutils==0.2.0
+jeepney==0.6.0
+joblib==0.17.0
+jsonschema==3.2.0
+keyring==21.5.0
+keyrings.alt==4.0.1
+knockknock==0.1.8.1
+lxml==4.6.2
+Markdown==3.3.2
+matrix-client==0.3.2
+netifaces==0.10.9
+numpy==1.19.0
+nvidia-ml-py3==7.352.0
+oauthlib==3.1.0
+olefile==0.46
+onnxruntime==1.5.2
+packaging==20.4
+pandas==1.1.3
+parso==0.7.0
+pipreqs==0.4.10
+premailer==3.7.0
+protobuf==3.13.0
+psutil==5.7.2
+ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyJWT==1.7.1
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pytorch-lightning==1.0.6
+pytz==2020.1
+PyYAML==5.3.1
+pyzmq==19.0.2
+regex==2020.10.15
 requests==2.24.0
-asposestorage==1.0.2
-scikit_learn==0.23.2
+requests-oauthlib==1.3.0
+rsa==4.6
+sacremoses==0.0.43
+scikit-learn==0.23.2
+scipy==1.5.3
+SecretStorage==3.3.0
+sentencepiece==0.1.91
+setproctitle==1.1.10
+six==1.15.0
+sklearn==0.0
+soynlp==0.0.493
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+threadpoolctl==2.1.0
+tokenizers==0.8.1rc1
+torch==1.6.0
+torchvision==0.7.0
+tornado==6.0.4
+tqdm==4.50.2
+transformers==3.0.2
+twilio==6.49.0
+typing-extensions==3.7.4.3
+tzlocal==2.1
+urllib3==1.25.11
+websocket-client==0.57.0
+Werkzeug==1.0.1
+widgetsnbextension==3.4.2
+wrapt==1.12.1
+wurlitzer==2.0.1
+yagmail==0.14.245
+yarg==0.1.9
+zipp==3.3.1
